@@ -1,3 +1,8 @@
+2008-05-25  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/structure.generators.R
+	(graph.data.frame) : added 'vertices' argument
+
 2008-05-20  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/centrality.R (arpack) : 
